# extracting-pictures-from-images

./: .gitignore  multipleBMP2SingleJPG.py  multipleImage2jpg-BandW.py  multipleImage2jpg-original.py  pyproject.toml
